@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<componentregistry>
- <utilities>
-  <utility
-     interface="Products.CMFFormController.interfaces.IFormControllerTool"
-     object="/portal_form_controller"/>
- </utilities>
-</componentregistry>
